<resources>
    <string name="app_name">ChatApp</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_account_string">Already have an account? Log in here</string>
    <string name="new_user_signup">New to ChatApp? Sign up now</string>
    <string name="log_out">Log out</string>
    <string name="new_message">New Message</string>
    <string name="sign_in">Sign In</string>
    <string name="usermessage">UserMessage</string>
    <string name="update_info">Update Info</string>
    <string name="change_info">Change Info</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="type_message">Type Message</string>
</resources>
