<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/rounded_corners_et"
            style="@style/et_signup"
            android:inputType="textEmailAddress"
            android:id="@+id/email_et_Login"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corners_et"
            style="@style/et_signup"
            android:id="@+id/password_et_Login"
    />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/signin_btn"
            android:background="@drawable/rounded_button"
            style="@style/btn_style"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_user_signup"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:ems="10"
            android:textStyle="italic"
            android:id="@+id/logInLink_tv_Register"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_password"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:ems="10"
            android:textStyle="bold"
            android:id="@+id/logInLink_tv_forgotPassword"
    />

</LinearLayout>