<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterActivity"
        android:background="@color/light_blue"
>
    <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/circle_image"-->
            <!--android:layout_width="150dp" android:layout_height="150dp"-->
            <!--app:layout_constraintTop_toTopOf="@+id/imageBtn_register"-->
            <!--app:layout_constraintEnd_toEndOf="@+id/imageBtn_register"-->
    <!--/>-->

    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageBtn_register"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="@drawable/rounded_image_view"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            style="@style/et_signup"
            android:background="@drawable/rounded_corners_et"
            android:id="@+id/userName_et_Register" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageBtn_register" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/rounded_corners_et"
            style="@style/et_signup"
            android:inputType="textEmailAddress"
            android:id="@+id/email_et_Register" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/userName_et_Register" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corners_et"
            style="@style/et_signup"
            android:id="@+id/password_et_Register" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email_et_Register" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/White"
            android:id="@+id/register_btn"
            android:background="@drawable/rounded_button"
            app:layout_constraintTop_toBottomOf="@+id/password_et_Register" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/already_account_string"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:ems="10"
            android:id="@+id/logInLink_tv_Register" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>

</android.support.constraint.ConstraintLayout>